--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
          <div id="hours_1" class="number_band">
             0<br />1<br />2
          </div>
+         <div class="hole specular"></div>
       </div>
       <div class="hole"
            id="hole_hours_0"
@@ -20,6 +21,7 @@
          <div id="hours_0" class="number_band">
             0<br />1<br />2<br />3<br />4<br />5<br />6<br />7<br />8<br />9
          </div>
+         <div class="hole specular"></div>
       </div>
       <div class="colon"
            style="left: 290px">
@@ -31,6 +33,7 @@
          <div id="minutes_1" class="number_band">
             0<br />1<br />2<br />3<br />4<br />5
          </div>
+         <div class="hole specular"></div>
       </div>
       <div class="hole"
            id="hole_minutes_0"
@@ -38,6 +41,7 @@
          <div id="minutes_0" class="number_band">
             0<br />1<br />2<br />3<br />4<br />5<br />6<br />7<br />8<br />9
          </div>
+         <div class="hole specular"></div>
       </div>
       <div class="colon"
            style="left: 630px">
@@ -49,6 +53,7 @@
          <div id="seconds_1" class="number_band">
             0<br />1<br />2<br />3<br />4<br />5
          </div>
+         <div class="hole specular"></div>
       </div>
       <div class="hole"
            id="hole_seconds_0"
@@ -56,6 +61,7 @@
          <div id="seconds_0" class="number_band">
             0<br />1<br />2<br />3<br />4<br />5<br />6<br />7<br />8<br />9
          </div>
+         <div class="hole specular"></div>
       </div>
    </div>
 </body>
