--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
    <meta charset="utf-8" />
    <title>CSS Clock</title>
-   <link rel="stylesheet" href="css/main.css">
    <script src="js/main.js"></script>
+   <link href='http://fonts.googleapis.com/css?family=Open+Sans:700' rel='stylesheet' type='text/css'>
+   <link href='http://fonts.googleapis.com/css?family=Roboto:700' rel='stylesheet' type='text/css'>
+   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
    <div id="clock">
