--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    <link href='http://fonts.googleapis.com/css?family=Open+Sans:700' rel='stylesheet' type='text/css'>
    <link href='http://fonts.googleapis.com/css?family=Roboto:700' rel='stylesheet' type='text/css'>
    <link rel="stylesheet" href="css/main.css">
+   <link rel="shortcut icon" type="image/png" href="images/favicon.png">
 </head>
 <body>
    <div id="clock">
